# moonstone-coordinator

./: pyproject.toml
app/: __init__.py  bluetooth_manager.py  database.py  main.py  models.py  websocket_manager.py  wifi_manager.py
app/static/: index.html  kiosk.html
centerville_coordinator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: centerville.db
scripts/: README.md  setup-kiosk.sh  setup-lcd.sh  setup-splash.sh  setup-wifi-manager.sh
tests/: test_models.py
